[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
futures-util = "0.3.29"
git2 = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
similar = "2.3.0"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
